--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -1,55 +1,119 @@
-#blogss {
-    padding-top: 4%;
+@font-face {
+    font-family: Marcellus;
+    src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+}
 
-    .container-blogs {
-        max-width: 94% !important
-    }
+#blogss {
+    padding-top: 10%;
 
     .blog-cart {
         position: relative;
         margin-bottom: 10%;
 
         .post-thumb {
+            width: 470px;
+            height: 278px;
+            overflow: hidden;
+            position: relative;
             cursor: pointer;
 
             img {
                 width: 100%;
-                height: 446px;
+                height: 100%;
                 transition: 1s;
+
+
+                &:hover {
+                    transform: scale(1.2);
+
+                }
+
+            }
+
+            span {
+                position: relative;
+                bottom: 29px;
+                background: #fff;
+                padding: 11px 11px 8px 0px;
+
+                a {
+                    color: #de9076;
+                    text-decoration: none;
+                    font-size: 11px;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+
+
+                }
+
+                &:hover {
+                    a {
+                        color: #d46f4d;
+                    }
+                }
             }
         }
 
         .post-info {
-            h4 {
-                font-size: 12px;
-                text-transform: uppercase;
-                font-family: Nunito;
-                letter-spacing: .2em;
-                font-weight: 500;
-                margin-top: 30px;
-                color: #aaa;
-            }
+            padding-top: 21px;
 
             h3 {
-                font-size: 22px;
-                font-weight: 500;
-                font-family: inherit;
                 transition: 0.1s;
+                font-family: 'Marcellus', serif;
+                font-size: 20px;
+                font-family: 'Marcellus';
+                font-weight: 400;
+                background-image: linear-gradient(to right, #de9076 50%, #000 50%);
+                background-size: 200% 100%;
+                background-position: 100%;
+                -webkit-background-clip: text;
+                transition: background-position .4s ease;
+                display: inline-block;
+                -webkit-text-fill-color: transparent;
+
 
                 &:hover {
                     background-position: bottom;
-                    color: #d16d4b;
+                    color: #d46f4d;
+                    background-position: 0 100%;
                 }
+            }
+
+            .entry-meta {
+
+                text-transform: uppercase;
+                font-size: 11px;
+                letter-spacing: 1px;
+
+                span {
+                    color: #4b5955;
+
+                    margin: 1px;
+
+                    &:nth-child(2) {
+                        color: #000;
+                    }
+                }
+
+                .time {
+                    &::before {
+                        content: '/';
+                        padding-left: 3px;
+                        padding-right: 5px;
+                    }
+                }
+
+
+
             }
 
             p {
                 font-size: 14px;
-                font-family: inherit;
-                font-weight: 400;
-                color: #a8a8a8;
-                margin-top: 22px;
-                text-align: justify;
+                color: #4b5955;
+                line-height: 1.8;
+                margin-top: 26px;
             }
+
 
             a span {
                 position: relative;
@@ -77,57 +141,51 @@
                     }
                 }
             }
-
-
-        }
-
-        .post-thumb {
-            overflow: hidden;
-
-            a {
-                img {
-                    &:hover {
-                        transform: scale(1.2);
-                       
-                    }
-                }
+            a{
+                text-decoration: none;
+                color:inherit;
             }
+
+
         }
+
+
 
         .single-post-date {
             z-index: 1;
-            width: 76px;
-            height: 76px;
+            width: 65px;
+            height: 65px;
             text-align: center;
             border-radius: 100%;
             display: inline-block;
             position: absolute;
             padding: 10px 16px;
             background-color: #fff;
-            left: 30px;
-            top: 30px;
+            left: 12px;
+            top: 12px;
 
             span {
                 font-family: inherit;
 
                 &:first-child {
-                    font-size: 20px;
+                    font-size: 17px;
                     font-weight: 500;
-                    &::before{
+
+                    &::before {
                         content: "";
-                        height: 2px;
+                        height: 1px;
                         width: 44px;
                         display: block;
                         background-color: #c8c8c8;
                         position: absolute;
                         top: 39px;
+                        right: 8px;
                         font-size: 20px;
-                        font-weight: 500;
                     }
                 }
 
                 &:last-child {
-                    font-size: 14px;
+                    font-size: 12px;
                     text-transform: uppercase;
                 }
             }
@@ -138,11 +196,126 @@
         gap: 26px;
     }
 
-    .widget {
-        margin-left: 6%;
-        width: 100%;
+    .right-side {
 
-        .widget-title {
+        padding-left: 8px;
+
+        .widget {
+            margin-left: 6%;
+            width: 100%;
+
+            .widget-title {
+                font-family: Nunito;
+                font-size: 14px;
+                font-weight: 500;
+                letter-spacing: .2em;
+                text-transform: uppercase;
+                padding-bottom: 13px;
+                position: relative;
+                border-bottom: 1px solid #e7e7e7;
+            }
+        }
+
+
+        .widget-content {
+            margin-left: 6%;
+
+            ul {
+                padding: 0px !important;
+                list-style: none;
+
+                li {
+                    cursor: pointer;
+                    padding: 8px 0;
+
+                    a {
+                        &:hover {
+                            color: #e9ac98;
+                        }
+                    }
+                }
+            }
+        }
+
+        .list-posts {
+            position: relative;
+            left: 6%;
+
+            .item-post {
+                border-bottom: 1px solid #f1f1f1;
+                margin-bottom: 6%;
+                padding-bottom: 3%;
+
+                .post-thumb {
+                    width: 80px;
+                    height: 80px;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+
+                    }
+                }
+
+                .post-info {
+                    margin-left: 4%;
+
+                    h3 {
+                        line-height: 0;
+                        padding-bottom: 3px;
+                        margin-top: 7px;
+                    }
+
+                    span {
+                        font-family: Nunito;
+                        font-size: 11px;
+                        color: #aaa;
+                        font-weight: 500;
+                        text-transform: uppercase;
+                        letter-spacing: .1em;
+
+
+
+                    }
+
+                    .date-post {
+                        padding-bottom: 5px !important;
+                    }
+
+                    a {
+                        text-decoration: none;
+                        font-size: 14px;
+                        font-weight: 400;
+                        color: #333;
+                        padding-bottom: 3px;
+
+                        &:hover {
+                            color: #e9ac98;
+                        }
+                    }
+                }
+            }
+
+        }
+
+     
+    }
+
+}
+
+
+#search {
+    .search-area {
+        float: right;
+        padding-top: 24px;
+        margin-right: 49px;
+
+    }
+
+    .widget-search {
+        width: 121%;
+
+        .search-title {
             font-family: Nunito;
             font-size: 14px;
             font-weight: 500;
@@ -150,6 +323,7 @@
             text-transform: uppercase;
             padding-bottom: 13px;
             position: relative;
+            left: 9px;
             border-bottom: 1px solid #e7e7e7;
         }
     }
@@ -161,8 +335,9 @@
         input {
             outline: none;
             position: relative;
-            left: 6%;
-            width: 100%;
+            left: 2%;
+            width: 121%;
+            height: 47px;
             border: none;
             background-color: #f3f3f3;
             padding: 16px 30px;
@@ -173,134 +348,53 @@
             position: absolute;
             top: 0;
             padding: 0;
-            height: 56px;
-            width: 85px;
+            height: 47px;
+            width: 77px;
             text-align: center;
             background: black;
             border: none;
-            left: 81%;
+            left: 95%;
 
             i {
                 color: #fff;
                 line-height: 56px;
-                font-size: 22px;
+                font-size: 17px;
+                position: relative;
+                bottom: 3px;
+                left: 1px;
             }
         }
     }
-
-    .widget-content {
-        margin-left: 6%;
-
-        ul {
-            padding: 0px !important;
-            list-style: none;
-
-            li {
-                cursor: pointer;
-                padding: 8px 0;
-
-                a {
-                    &:hover {
-                        color: #e9ac98;
-                    }
-                }
-            }
-        }
-    }
-
-    .list-posts {
-        position: relative;
-        left: 6%;
-
-        .item-post {
-            border-bottom: 1px solid #f1f1f1;
-            margin-bottom: 6%;
-            padding-bottom: 3%;
-
-            .post-thumb {
-                width: 80px;
-                height: 80px;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-
-                }
-            }
-
-            .post-info {
-                h3 {
-                    line-height: 0;
-                    padding-bottom: 3px;
-                    margin-top: 7px;
-                }
-
-                margin-left: 4%;
-
-                span {
-                    font-family: Nunito;
-                    font-size: 11px;
-                    color: #aaa;
-                    font-weight: 500;
-                    text-transform: uppercase;
-                    letter-spacing: .1em;
+}
 
 
+#footer-top-blog {
+    background-color: #f9f9f5;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    margin-top: 69px;
+    margin-bottom: 40px;
+    .service-item {
+        text-align: center;
 
-                }
-
-                .date-post {
-                    padding-bottom: 5px !important;
-                }
-
-                a {
-                    text-decoration: none;
-                    font-size: 14px;
-                    font-weight: 400;
-                    color: #333;
-                    padding-bottom: 3px;
-
-                    &:hover {
-                        color: #e9ac98;
-                    }
-                }
-            }
+        img {
+            display: block;
+            margin: auto;
+            padding-bottom: 20px;
         }
 
-    }
-
-    .widget-sizes {
-        margin-left: 21px;
-
-        ul {
-            list-style: none;
-            padding: 0px !important;
-
-            li {
-                margin-bottom: 9px;
-                border: 1px solid;
-                width: 37px;
-                height: 38px;
-
-                a {
-                    text-decoration: none;
-                    position: relative;
-                    top: 5px;
-                    left: 10px;
-                    color: inherit;
-                }
-
-                &:hover {
-                    background-color: #e9ac98;
-                    border-color: #e9ac98;
-
-                    a {
-                        color: white;
-                    }
-
-                }
-
-            }
+        .title {
+            color: #000;
+            font-size: 16px;
+            line-height: 30px;
+            font-weight: 700;
         }
+
+        p {
+            margin-top: 1%;
+            font-size: 14px;
+            color: #4b5955;
+        }
+
     }
 }
