--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -89,26 +89,42 @@
 
         }
 
-    
+
     }
+
     .login-register {
         position: absolute;
         right: 9%;
-        top: 18%;
-        width: 140px;
-        height: 59px;
+        top: 27%;
+        width: 143px;
+        height: 37px;
         border: 1px solid #eaeaea;
         background: #fff;
+
         ul {
             padding: 0px;
+            margin-left: 7px;
+            margin-top: 2px;
+            display: flex;
+            gap: 7px;
+           
+
             li {
-                margin-left: 7px;
                 list-style: none;
-                a{
+
+
+                a {
+                    
+                    font-size: 17px;
                     color: #666;
-                    font-size: 15px;
+
                 }
+
             }
+            span{
+                color: #666;
+            }
+            
 
 
         }
@@ -248,35 +264,7 @@
 }
 
 
-#footer-top {
-    background-color: #f9f9f5;
-    padding-top: 6%;
-    padding-bottom: 6%;
 
-    .service-item {
-        text-align: center;
-
-        img {
-            display: block;
-            margin: auto;
-            padding-bottom: 20px;
-        }
-
-        .title {
-            color: #000;
-            font-size: 16px;
-            line-height: 30px;
-            font-weight: 700;
-        }
-
-        p {
-            margin-top: 1%;
-            font-size: 14px;
-            color: #4b5955;
-        }
-
-    }
-}
 
 #footer {
     padding-top: 5%;
