--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -1,5 +1,6 @@
-#register {
+#login {
     padding-top: 71px;
+
     .form-login {
         display: flex;
         justify-content: center;
@@ -35,13 +36,14 @@
 
         }
 
-        h2{
-            
+        h2 {
+
             font-family: Marcellus;
             font-weight: 400;
             font-style: normal;
             font-size: 27px;
         }
+
         button {
             border: none;
             border-radius: 0;
@@ -63,14 +65,41 @@
             display: block;
             margin-bottom: 5px;
         }
-        .area-password{
+
+        .area-password {
             position: relative;
-            i{
+
+            i {
                 position: absolute;
                 bottom: 16px;
                 right: 23px;
-                color:#de9076;
+                color: #de9076;
             }
+        }
+
+        .login-bottom {
+            position: relative;
+            display: flex;
+            align-items: center;
+
+            span {
+                cursor: pointer;
+                margin-left: 7px;
+                font-weight: 400;
+                font-size: 15px;
+                color: #4b5955;
+            }
+            p{
+                position: absolute;
+                right: 2px;
+                a{
+                font-size: 15px;
+                color: #4b5955;
+                text-decoration: underline;
+                text-decoration-style: dotted;
+                }
+            }
+
         }
     }
 
