--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -17,8 +17,103 @@
     width: 94% !important;
 }
 
+#sort-area {
+    .sort {
+        float: right;
+        position: relative;
+        right: 111px;
+        top: 19px;
+       
+        option{
+            &:se{
+                color: #fff;
+            }
+        }
+    }
+}
+
 #wpb_wrapper {
-    padding-top: 26px;
+    margin-top: 71px;
+
+
+    .price-filter {
+
+        .card {
+            border: none;
+            padding: 0 20px 20px 20px;
+        }
+
+        h4 {
+            color: #000;
+            margin-bottom: 20px;
+            text-align: center;
+            font-weight: 600;
+        }
+
+        .price-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            // margin-right: 110px;
+            margin-top: 10px;
+
+            .filter-button {
+                button {
+                    border: none;
+                    background-color: #b97a56;
+                    height: 40px;
+                    width: 90px;
+                    color: white;
+                }
+
+            }
+        }
+
+        label {
+            font-size: 12px;
+            font-weight: 500;
+        }
+
+        p {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .range-slider {
+            position: relative;
+            margin: 15px 0 30px 0;
+
+        }
+
+        input[type=range] {
+            width: 100%;
+            background: transparent;
+            position: absolute;
+            left: 0;
+        }
+
+        input[type=range]::-webkit-slider-thumb {
+            height: 15px;
+            width: 15px;
+            border-radius: 50%;
+            background: #36b37e;
+
+            cursor: pointer;
+            margin-top: -5px;
+            position: relative;
+            z-index: 1;
+        }
+
+
+        input[type=range]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 5px;
+            background: #b97a56;
+            border-radius: 3px;
+            border: none;
+        }
+    }
+
 
     .products-variants {
         padding-top: 22px;
@@ -97,7 +192,7 @@
             }
 
         }
-     
+
         .widget-title-holder {
             ul {
                 padding: 0;
@@ -115,7 +210,8 @@
                         padding-right: 5px;
                         font-family: 'Open Sans', sans-serif;
                     }
-                    &:hover{
+
+                    &:hover {
                         color: #ce56a1;
                     }
                 }
@@ -177,6 +273,7 @@
                 transform: scale3d(1.05, 1.05, 1.05) translateZ(0);
 
             }
+
             .functional-button {
                 opacity: 1;
 
@@ -193,8 +290,10 @@
             ul {
                 list-style: none;
                 display: block;
+
                 li {
                     padding-bottom: 9%;
+
                     a {
                         background: #fff;
                         line-height: 25px;
