--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,12 +1,13 @@
 @import './home';
-@import './about';
+@import './layout';
 @import './blog';
 @import './contact';
-@import './layout';
 @import './shop';
 @import './productDetail';
+@import './blogDetail';
 @import './basket';
 @import './wishlist';
+@import './about';
 @import './register';
 @import './login';
 @import './responsive';
