--- a/assets/scss/_productDetail.scss
+++ b/assets/scss/_productDetail.scss
@@ -1,3 +1,53 @@
+#wrapper {
+    margin-top: 2%;
+    background-size: cover;
+    .page_text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 300px;
+        width: 406px;
+    text-align: center;
+
+        h1 {
+            text-transform: uppercase;
+            color: #3e3d3d;
+            font-weight: 600;
+            font-size: 1.375rem;
+            font-family: auto;     
+        }
+
+        ul {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            padding: 0px !important;
+            gap: 4px;
+
+            li {
+                font-size: 14px;
+                margin: 4px;
+                margin: 0 !important;
+
+                span {
+                    color: #666;
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: #9faaa7;
+            }
+
+            i {
+                position: relative;
+                font-size: 11px;
+                bottom: 1px;
+            }
+        }
+    }
+}
 #product-detail {
     padding-top: 2%;
     background: #f9f6f6;
@@ -102,6 +152,7 @@
         .count-review {
             display: inline-block;
             margin-left: 6px;
+
             span {
                 font-size: 19px;
                 color: #5c3c30;
@@ -374,6 +425,47 @@
                 display: none;
                 background: #fff;
                 padding: 15px;
+
+                .user-area {
+                    align-items: center;
+                    margin-bottom: 43px;
+                    padding-left: 5px;
+                    .user-img {
+                        img {
+                            border-radius: 50%;
+                            width: 77px;
+                            height: 77px;
+                        }
+                    }
+    
+                    .user-info {
+                        margin-left: 22px;
+                        margin-bottom: 14px;
+    
+                        h2 {
+                            font-size: 16px;
+                            color: #5c6864;
+                            margin: 0px;
+                        }
+    
+                        span {
+                            font-size: 13px;
+                        }
+    
+                        p {
+    
+                            font-size: 14px;
+                            line-height: 24px;
+                            color: #4b5955;
+    
+                        }
+                    }
+                }
+                .info-for-user{
+                    padding-left: 24px;
+                }
+
+         
             }
 
             .tab-content.current {
@@ -383,11 +475,13 @@
                     font-size: 14px;
                     line-height: 24px;
                     color: #4b5955;
-                    margin: 5px 23px;
+                    margin: 0px;
                 }
 
                 h6 {
-                    margin: 5px 23px;
+                    margin: 9px 23px;
+                    font-family: 'Marcellus';
+                    margin-bottom: 34px;
 
                 }
             }
@@ -492,9 +586,7 @@
                 outline: none;
             }
 
-            .product-rate {
-                margin: 10px 23px;
-            }
+            
 
 
 
@@ -507,6 +599,9 @@
 
 }
 
+hr {
+    color: #b4afaf;
+}
 .detail-container {
     max-width: 1370px !important;
 }
@@ -545,4 +640,8 @@
         }
     }
 
+}
+@font-face {
+    font-family: Marcellus;
+    src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 }
