--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -73,7 +73,9 @@
     .line {
         display: none;
     }
-
+    hr {
+        color: #b4afaf;
+    }
     #introducing {
 
         .intro-text {
