--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,6 +1,6 @@
 #wrapper {
     margin-top: 2%;
-
+    background-size: cover;
     .page_text {
         display: flex;
         justify-content: center;
@@ -8,7 +8,7 @@
         flex-direction: column;
         height: 300px;
         width: 406px;
-    text-align: center;
+        text-align: center;
 
         h1 {
             text-transform: uppercase;
@@ -16,7 +16,7 @@
             font-weight: 600;
             font-size: 1.375rem;
             font-family: auto;
-            
+
         }
 
         ul {
@@ -202,6 +202,7 @@
         img {
             margin-top: 9px;
         }
+
         p {
             color: #e9ac98 !important;
             font-size: 12px;
@@ -301,33 +302,117 @@
 
 }
 
-#block-carousel {
+
+#block-carousel-about {
     margin-top: 3%;
 
-    .mySwiper {
-        .slide {
-            .slide-color {
-                color: #000;
+    .swiper-button-next {
+        display: none !important;
+    }
+
+    .swiper-button-prev {
+        display: none !important;
+    }
+    .swiper-pagination{
+        bottom: 120px;
+        gap: di;
+        display: flex;
+        justify-content: center;
+        gap: 22px;
+        .swiper-pagination-bullet{
+            background-color: #000;
+            width: 3px;
+            height: 3px;
+        }
+    }
+
+    .owl-item {
+        height: 572px;
+
+       
+
+        .block-image {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 3%;
+            img {
+                height: 100%;
             }
         }
 
-        .slide-cont {
-            top: 15%;
+        .slider-content {
+            width: 625px;
+            text-align: center;
+            position: absolute;
+            left: 29%;
+            top: 20%;
+
+            .descript {
+                padding-top: 4%;
+                color: #000;
+                font-size: 30px;
+                font-style: italic;
+                line-height: 40px;
+                text-align: center;
+            }
+            .user-img {
+
+                img {
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 50%;
+                    margin-top: 15px
+                }
+            }
         }
+
+        .title {
+            width: 105px;
+            position: relative;
+            left: 42%;
+            top: 23px;
+            color: #000;
+            text-transform: uppercase;
+
+            &::after {
+
+                right: -70px;
+                content: "";
+                height: 1px;
+                width: 40px;
+                background: #000;
+                display: inline-block;
+                vertical-align: middle;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            &::before {
+                left: -70px;
+                content: "";
+                height: 1px;
+                width: 40px;
+                background: #000;
+                display: inline-block;
+                vertical-align: middle;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+
+        }
+        .job{
+            margin-top: 28px;
+        }
+     
     }
 
-    .about-pagination {
-        bottom: 110px;
-
-        span {
-            background-color: #666;
-
-        }
-    }
-
-
-
+  
 }
+
 
 #footer-top-about {
     border: 1px solid #EDEDED;
@@ -360,7 +445,10 @@
     }
 }
 
+hr {
+    color: #b4afaf;
+}
 @font-face {
-    font-family: Marcellus;
-    src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+    font-family: Great Vibes;
+    src: url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 }
