--- a/assets/scss/_blogDetail.scss
+++ b/assets/scss/_blogDetail.scss
@@ -1,3 +1,53 @@
+#wrapper {
+    margin-top: 2%;
+    background-size: cover;
+    .page_text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 300px;
+        width: 406px;
+    text-align: center;
+
+        h1 {
+            text-transform: uppercase;
+            color: #3e3d3d;
+            font-weight: 600;
+            font-size: 1.375rem;
+            font-family: auto;
+        }
+
+        ul {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            padding: 0px !important;
+            gap: 4px;
+
+            li {
+                font-size: 14px;
+                margin: 4px;
+                margin: 0 !important;
+
+                span {
+                    color: #666;
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: #9faaa7;
+            }
+
+            i {
+                position: relative;
+                font-size: 11px;
+                bottom: 1px;
+            }
+        }
+    }
+}
 #site-content {
     padding-top: 81px;
     border-bottom: 1px solid;
@@ -77,7 +127,7 @@
         h3 {
             font-family: auto;
             color: #b0948a;
-            font-family: Marcellus;
+            font-family: 'Marcellus';
             margin-bottom: 20px;
         }
 
@@ -89,8 +139,10 @@
         }
 
         img {
-            width: 300px;
+            width: 274px;
             height: 200px;
+
+
         }
 
         .post-info-author-text {
@@ -271,13 +323,14 @@
     }
 
     .categories-2 {
+        margin-left: 20px;
         border-width: 1px;
         border-style: solid;
         border-color: #ebebeb;
         padding: 24px;
-        height: 242px;
+        height: 211px;
 
-        span {
+        .title {
             font-family: Marcellus;
             font-weight: 400;
             font-style: normal;
@@ -285,14 +338,149 @@
             color: #000;
             border-bottom: 1px solid;
             border-bottom-color: #ebebeb;
+            display: block;
+            width: 94%;
+            padding-bottom: 10px;
         }
 
         ul {
-            list-style: none ;
+            list-style: none;
             padding: 0px;
             margin-top: 10px;
-            li{
-                line-height: 31px;
+
+            li {
+             a{
+                cursor: pointer;
+                &:hover{
+                    color:#de9076;
+                }
+             }
+
+                line-height: 29px;
+
+                span {
+                    color: #9faaa7;
+                    margin-left: 4px;
+                }
+            }
+        }
+    }
+
+    .recent-posts {
+        margin-left: 20px;
+        border-style: solid;
+        border-color: #ebebeb;
+        border-width: 1px;
+        margin-top: 26px;
+        padding: 24px 24px 0px 24px;
+
+        .title {
+            font-family: Marcellus;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 18px;
+            color: #000;
+            border-bottom: 1px solid;
+            border-bottom-color: #ebebeb;
+            display: block;
+            width: 94%;
+            padding-bottom: 10px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0px;
+            margin-top: 22px;
+
+
+            li {
+                margin-bottom: 23px;
+                display: flex;
+                justify-content: space-between;
+
+                a {
+                    text-decoration: none;
+                }
+            }
+        }
+
+        .recent-posts-thumbnail {
+            width: 103px;
+            height: 95px;
+
+            img {
+                cursor: pointer;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .recent-posts-info {
+            width: 224px;
+            height: 100px;
+            margin-right: 3px;
+            margin-top: 7px;
+
+            .post-title {
+                cursor: pointer;
+                span {
+                    margin-right: 25px;
+                    font-size: 14px;
+                    color: #3e3d3d;
+                    font-weight: 700;
+                    &:hover{
+                        color:#de9076;
+                    }
+                }
+
+            }
+
+            .post-date {
+                display: block;
+                font-size: 12px;
+                color: #b0b0b0;
+                margin-top: 6px;
+
+            }
+
+
+        }
+    }
+
+    .widget_tag_cloud {
+        margin-left: 20px;
+        border-style: solid;
+        border-color: #ebebeb;
+        border-width: 1px;
+        margin-top: 26px;
+        padding: 27px 17px;
+
+        .title {
+            font-family: Marcellus;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 18px;
+            color: #000;
+            border-bottom: 1px solid;
+            border-bottom-color: #ebebeb;
+            display: block;
+            width: 94%;
+            padding-bottom: 10px;
+        }
+        .tagcloud{
+            margin-top: 26px;
+            
+            a{
+                color: #626262;
+                font-size: 12px!important;
+                display: inline-block;
+                padding: 7px 15px;
+                background-color: #f6f6f6;
+                margin-bottom: 6px;
+                &:hover{
+                    color: #fff!important;
+                    background-color: #de9076;
+                }
             }
         }
     }
@@ -327,4 +515,11 @@
         }
 
     }
+}
+hr {
+    color: #b4afaf;
+}
+@font-face {
+    font-family: Marcellus;
+    src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 }
