--- a/assets/scss/_contact.scss
+++ b/assets/scss/_contact.scss
@@ -1,13 +1,96 @@
-#map {
-    .container-contact{
-        max-width: 1432px !important;
-    }
-    padding-top: 2%;
+#contact {
 
-    .map-cart {
-        iframe {
-            width: 100%;
+    padding-top: 54px;
+
+    .contact-area {
+        border-style: solid;
+        border-width: 1px;
+        border-color: #E3E3E3;
+        margin: 0px;
+    }
+
+    .elementor-column-wrap {
+        padding: 80px 50px 80px 45px;
+
+        h2 {
+            font-size: 12px;
+            font-weight: 700;
+            text-transform: uppercase;
+            font-family: 'Marcellus';
+            text-align: center;
+            margin-bottom: 23px;
         }
+
+        p {
+            color: #4B5955;
+            text-align: center;
+            font-size: 14px;
+            margin-bottom: 38px;
+
+        }
+    }
+
+    .elementor-column {
+        .elementor-widget-container {
+            border-style: solid;
+            border-width: 0 0px 0px 1px;
+            border-color: #E3E3E3;
+            height: 438px;
+            margin-top: 59px;
+            padding: 7px 58px;
+
+            .elementor-form {
+                margin-left: 78px;
+                input {
+                    background-color: #FFF;
+                    border-color: #CCC;
+                    border-width: 0 0 1px 0;
+                    font-size: 14px;
+                    color: #4B5955;
+                    width: 339px;
+                    height: 40px;
+                    padding-bottom: 6px;
+                }
+
+                .input-area {
+                    display: flex;
+                    gap: 37px;
+                    margin-bottom: 32px;
+                }
+
+                textarea {
+                    border-color: #F6F6F6;
+                    background: #F6F6F6;
+                    border-width: 1px;
+                    width: 719px;
+                    height: 186px;
+                    font-size: 14px;
+                    padding: 14px 14px 14px 14px;
+                }
+
+                button {
+                    background-color: #E9AC98;
+                    border-color: #E9AC98;
+                    display: block;
+                    font-size: 11px;
+                    font-weight: 400;
+                    text-transform: uppercase;
+                    border-style: solid;
+                    border-width: 1px 1px 1px 1px;
+                    border-radius: 0 0 0 0;
+                    padding: 0 15px 0 15px;
+                    min-height: 59px;
+                    color: #fff;
+                    margin-top: 20px;
+                }
+            }
+        }
+
+    }
+}
+#map{
+    iframe{
+        width: 100%;
     }
 }
 @font-face {
@@ -19,89 +102,72 @@
     height: 403px;
 }
 
-#wrapper{
-    .page_text{
-         .contact-p{
-        color: #3b4945;
-    }  
-    }
- 
-}
-#brand-log {
-    .contact-top {
-        padding: 40px;
+#wrapper {
+    margin-top: 2%;
+    background-size: cover;
 
-        .contact-header {
-            text-align: center;
-            padding: 30px;
+    .page_text {
+        .contact-p {
+            color: #3b4945;
+        }
+    }
+
+    .page_text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 300px;
+        width: 406px;
+        text-align: center;
+
+        h1 {
+            text-transform: uppercase;
+            color: #3e3d3d;
+            font-weight: 600;
+            font-size: 1.375rem;
+            font-family: auto;
 
         }
-
-        .contact-title {
-            h3 {
-                margin-bottom: 3%;
-                text-transform: uppercase;
-                font-weight: 600 !important;
-                letter-spacing: .05em;
-                color: #333;
-                font-size: 50px;
-                font-family: 'Marcellus';
-                font-weight: 400;
-            }
-        }
-
-    }
-}
-#contact-list{
-    margin-bottom: 12px;
-    .store-name {
-        font-family: 'Playball', cursive;
-        margin-top: 25px;
-    }
-
-    .store-location {
-        margin-top: 30px;
 
         ul {
-            line-height: 30px;
-        }
-    }
+            list-style: none;
+            display: flex;
+            align-items: center;
+            padding: 0px !important;
+            gap: 4px;
 
-    ul {
-        list-style: none;
-        padding: 0px;
+            li {
+                font-size: 14px;
+                margin: 4px;
+                margin: 0 !important;
 
-        li {
+                span {
+                    color: #666;
+                }
+            }
+
             a {
                 text-decoration: none;
-                font-family: "Open Sans", sans-serif;
-                font-size: 14px;
-                font-weight: 300;
-                color: #676767a8;
+                color: #9faaa7;
             }
 
-            p {
-                font-family: "Open Sans", sans-serif;
-                font-size: 14px;
-                font-weight: 300;
-                color: #676767a8;
+            i {
+                position: relative;
+                font-size: 11px;
+                bottom: 1px;
             }
         }
-    }
-
-    .store-social {
-        margin-top: 40px;
-
-        .social {
-            display: flex;
-            justify-content: space-between;
-            width: 100px;
-        }
-
     }
 }
+
+
+
+hr {
+    color: #b4afaf;
+}
+
 @font-face {
     font-family: Marcellus;
     src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 }
-
