--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,36 +1,5 @@
-@font-face {
-    font-family: Marck Script;
-    src: url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
-}
-
-@font-face {
-    font-family: Qwitcher Grypen;
-    src: url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap');
-}
-
-
-@font-face {
-    font-family: WindSongt;
-    src: url('https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap');
-}
-
-@font-face {
-    font-family: Roboto;
-    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-}
-
-@font-face {
-    font-family: Alex Brush;
-    src: url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
-}
-
-@font-face {
-    font-family: Great Vibes;
-    src: url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-}
-
 #slider {
-    padding-top: 2%;
+    padding-top: 1%;
 
     .swiper-pagination {
         .swiper-pagination-bullet {
@@ -242,11 +211,21 @@
     }
 
 }
-
+hr {
+    color: #b4afaf;
+}
 #introducing {
     padding-top: 7%;
     padding-bottom: 6%;
-
+   .image{
+    overflow: hidden;
+    img{
+        &:hover{
+            transform: scale(1.1);
+            transition: 0.8s;
+        }
+    }
+   }
     .apImage {
         float: right;
         position: relative;
@@ -280,6 +259,15 @@
 
     .introducing-right {
         margin-left: 17%;
+        .introducing-image{
+            overflow: hidden;
+            img{
+                &:hover{
+                    transform: scale(1.1);
+                    transition: 0.8s;
+                }
+            }
+        }
     }
 
     .info-text {
@@ -381,7 +369,21 @@
     }
 
 }
-
+.back-top{
+    float: right;
+    text-align: center;
+    position: fixed;
+    cursor: pointer;
+    right: 50px;
+    bottom: 20px;
+    z-index: 99;
+    width: 45px;
+    height: 45px;
+    background: #e9ac98;
+    color: #fff;
+    line-height: 45px;
+    font-size: 16px;
+}
 #products {
     .cart {
         position: relative;
@@ -864,7 +866,6 @@
             height: 0px;
             position: absolute;
             z-index: -11;
-            opacity: 0;
             transition: 0.7s;
 
             img {
@@ -1051,4 +1052,35 @@ img.rot {
     100% {
         transform: rotate(360deg);
     }
+}
+
+@font-face {
+    font-family: Marck Script;
+    src: url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
+}
+
+@font-face {
+    font-family: Qwitcher Grypen;
+    src: url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen&display=swap');
+}
+
+
+@font-face {
+    font-family: WindSongt;
+    src: url('https://fonts.googleapis.com/css2?family=WindSong:wght@500&display=swap');
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+}
+
+@font-face {
+    font-family: Alex Brush;
+    src: url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
+}
+
+@font-face {
+    font-family: Great Vibes;
+    src: url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 }
