--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -1,3 +1,53 @@
+#wrapper {
+    margin-top: 2%;
+    background-size: cover;
+    .page_text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 300px;
+        width: 406px;
+    text-align: center;
+
+        h1 {
+            text-transform: uppercase;
+            color: #3e3d3d;
+            font-weight: 600;
+            font-size: 1.375rem;
+            font-family: auto;
+        }
+
+        ul {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            padding: 0px !important;
+            gap: 4px;
+
+            li {
+                font-size: 14px;
+                margin: 4px;
+                margin: 0 !important;
+
+                span {
+                    color: #666;
+                }
+            }
+
+            a {
+                text-decoration: none;
+                color: #9faaa7;
+            }
+
+            i {
+                position: relative;
+                font-size: 11px;
+                bottom: 1px;
+            }
+        }
+    }
+}
 #nav-down {
     .top-menu {
         a {
@@ -18,105 +68,151 @@
 }
 
 #sort-area {
-    .sort {
-        float: right;
-        position: relative;
-        right: 111px;
-        top: 19px;
-       
-        option{
-            &:se{
-                color: #fff;
-            }
+    .sort-result {
+        
+        p {
+            color: #000;
+            font-weight: 400;
+            display: inline;
+           
         }
+
+    }
+
+    .sort {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: 500;
+        letter-spacing: .05em;
+        font-family: "Crimson Text";
+        text-transform: uppercase;
+        width: 919px;
+        position: relative;
+        top: 57px;
+        left: 29%;
+    }
+
+    .form-select {
+        color: gray;
+        height: 39px;
+        width: 205px;
+
+
+        &:focus {
+            box-shadow: none;
+            border-color: rgba(128, 128, 128, 0.2117647059);
+        }
+
+
     }
 }
+
+hr {
+    color: #b4afaf;
+}
+
 
 #wpb_wrapper {
     margin-top: 71px;
 
 
-    .price-filter {
-
-        .card {
-            border: none;
-            padding: 0 20px 20px 20px;
-        }
-
-        h4 {
+    .product-area {
+        h3 {
+            text-transform: uppercase;
             color: #000;
-            margin-bottom: 20px;
-            text-align: center;
-            font-weight: 600;
+            font-size: 17px;
+            line-height: 1.8em;
+            letter-spacing: 2px;
+            font-weight: 400;
+            font-family: Lora, serif;
+            border-bottom: 1px dashed #bbb;
+            margin-left: 17px;
+            width: 209px;
         }
 
-        .price-content {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            // margin-right: 110px;
-            margin-top: 10px;
+        .price-filter {
 
-            .filter-button {
-                button {
-                    border: none;
-                    background-color: #b97a56;
-                    height: 40px;
-                    width: 90px;
-                    color: white;
+            .card {
+                border: none;
+                padding: 0 20px 20px 20px;
+            }
+
+            h4 {
+                color: #000;
+                margin-bottom: 20px;
+                text-align: center;
+                font-weight: 600;
+            }
+
+            .price-content {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 10px;
+
+                .filter-button {
+                    button {
+                        border: none;
+                        background-color: #e9ac98;
+                        height: 40px;
+                        width: 90px;
+                        color: white;
+                    }
+
                 }
+            }
+
+            label {
+                font-size: 12px;
+                font-weight: 500;
+            }
+
+            p {
+                font-size: 16px;
+                font-weight: 600;
+            }
+
+            .range-slider {
+                position: relative;
+                margin: 15px 0 30px 0;
 
             }
-        }
 
-        label {
-            font-size: 12px;
-            font-weight: 500;
-        }
+            input[type=range] {
+                width: 100%;
+                background: transparent;
+                position: absolute;
+                left: 0;
+            }
 
-        p {
-            font-size: 16px;
-            font-weight: 600;
-        }
+            input[type=range]::-webkit-slider-thumb {
+                height: 15px;
+                width: 15px;
+                border-radius: 50%;
+                background: #36b37e;
 
-        .range-slider {
-            position: relative;
-            margin: 15px 0 30px 0;
-
-        }
-
-        input[type=range] {
-            width: 100%;
-            background: transparent;
-            position: absolute;
-            left: 0;
-        }
-
-        input[type=range]::-webkit-slider-thumb {
-            height: 15px;
-            width: 15px;
-            border-radius: 50%;
-            background: #36b37e;
-
-            cursor: pointer;
-            margin-top: -5px;
-            position: relative;
-            z-index: 1;
-        }
+                cursor: pointer;
+                margin-top: -5px;
+                position: relative;
+                z-index: 1;
+            }
 
 
-        input[type=range]::-webkit-slider-runnable-track {
-            width: 100%;
-            height: 5px;
-            background: #b97a56;
-            border-radius: 3px;
-            border: none;
+            input[type=range]::-webkit-slider-runnable-track {
+                width: 100%;
+                height: 5px;
+                background: #e9ac98;
+                border-radius: 3px;
+                border: none;
+            }
         }
     }
 
 
+
     .products-variants {
-        padding-top: 22px;
+        padding-top: 10px;
 
         h5 {
             text-transform: uppercase;
@@ -368,4 +464,8 @@
     }
 
 
+}
+@font-face {
+    font-family: Marcellus;
+    src: url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 }
